@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.8.6 
+- Remove unnecessary implemented assignment operator in quaternion which causes warnings with -Wdeprecated in newer gcc
 - Avoid warning about stringop-overflow in string<T>::subString when compiling in release with newer gcc
 - Update library zlib to 1.2.11 (from 1.2.8)
 - Update library bzip2 to 1.0.8 (from 1.0.6)
